--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -33,7 +33,28 @@ server {
 
         # API proxy (example)
         location /api/ {
+            rewrite ^/api(/.*)$ $1 break; 
             proxy_pass http://backend:8080;  # Adjust the API service name and port
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # CORS headers
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+
+            if ($request_method = OPTIONS) {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+                return 204;
+            }
+        }
+
+        location /actuator/ {
+            proxy_pass http://gateway:8888;  # Adjust the API service name and port
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
