--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       - "8080:8080" # Exposing port 8081 externally to map to app's internal port 8080
     environment:
       PORT: 8080
-      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI: http://keycloak:18080/realms/myrealm
-      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: http://keycloak:18080/realms/myrealm/protocol/openid-connect/certs
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI: http://localhost:18080/realms/myrealm
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: http://localhost:18080/realms/myrealm/protocol/openid-connect/certs
       SPRING_DATASOURCE_URL: jdbc:sqlite:/data/panama.db?cache=shared
       ENCRYPTION_KEY: 1234567891234567
     volumes:
@@ -42,8 +42,6 @@ services:
       - "8888:8888" # Exposing port 8082 externally to map to app's internal port 8080
     environment:
       GATEWAY_PORT: 8888
-      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI: http://keycloak:18080/realms/myrealm
-      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: http://keycloak:18080/realms/myrealm/protocol/openid-connect/certs
       SPRING_DATASOURCE_URL: jdbc:sqlite:/data/panama.db?cache=shared
       ENCRYPTION_KEY: 1234567891234567
     volumes:
