--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: http://localhost:18080/realms/myrealm/protocol/openid-connect/certs
       SPRING_DATASOURCE_URL: jdbc:sqlite:/data/panama.db?cache=shared
       ENCRYPTION_KEY: 1234567891234567
+      GATEWAY_URL: http://gateway:8888
     volumes:
       - ./data:/data
     networks:
@@ -76,7 +77,7 @@ services:
       - my_network
   postgres_svr:
     container_name: postgres_svr
-    image: postgres:10
+    image: postgres:12
     command: postgres -c 'max_connections=200' && postgres -c 'shared_buffers=24MB'
     environment:
       POSTGRES_DB: db_name
